[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "warden-ai"
version = "0.2.0"
description = "Wrap your Anthropic / OpenAI Python client. Every tool call is inspected by Agent Warden before it runs."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "VanteguardLabs", email = "vanteguardlabs@gmail.com" }]
keywords = ["agent", "ai", "security", "anthropic", "openai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "typing-extensions>=4.10; python_version < '3.12'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "respx>=0.21",
]

[project.urls]
Repository = "https://github.com/vanteguardlabs/warden-ai-py"
Issues = "https://github.com/vanteguardlabs/warden-ai-py/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/warden_ai"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = [".", "tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "SIM", "RUF"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/warden_ai"]
